fix issue with policy flipping, fix overflow issues with firefox on 1080p resolution and add experimental Smolgen weight visualizatio with severe performance issues to be solved.

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -25,6 +25,8 @@
 .header-container {
     border-bottom: thin lightgrey solid;
     box-sizing: border-box;
+    white-space: nowrap;
+    overflow-y: auto;
 }
 
 .header-control-container {
